2007-04-27  Rodrigo Moya <rodrigo@gnome-db.org>

	* background.desktop.in.in: renamed Bugzilla product.

2007-04-16  Jens Granseuer  <jensgr@gmx.net>

	Patch by: Priit Laes <amd@store20.com>

	* gnome-background-properties.glade:
	* gnome-wp-capplet.c: (gnome_wp_option_menu_set),
	(gnome_wp_scale_type_changed), (gnome_wp_shade_type_changed),
	(wallpaper_properties_init): replace deprecated GtkOptionMenu with
	GtkComboBox (closes bug #421199)

2007-04-16  Jens Granseuer  <jensgr@gmx.net>

	* gnome-wp-capplet.c: (gnome_wp_load_stuffs): don't crash if the
	GConf schema is missing (bug #430253). Also fix initialization of
	the secondary colour picker

2007-04-08  Jens Granseuer  <jensgr@gmx.net>

	Patch by: Kristof Vansant <de_lupus@pandora.be>

	* gnome-background-properties.glade: don't require gnome glade lib

2007-03-04  Jens Granseuer  <jensgr@gmx.net>

	* gnome-wp-capplet.c: (gnome_wp_add_images),
	(gnome_wp_file_open_dialog), (bg_properties_dragged_image),
	(gnome_wp_main_quit), (gnome_wp_scale_type_changed),
	(gnome_wp_shade_type_changed), (gnome_wp_load_stuffs),
	(gnome_wp_options_changed), (gnome_wp_shading_changed),
	(wallpaper_properties_init), (main):
	* gnome-wp-item.c: (gnome_wp_item_new),
	(gnome_wp_item_get_thumbnail):
	* gnome-wp-xml.c: (gnome_wp_load_legacy), (gnome_wp_xml_load_xml),
	(gnome_wp_list_flatten), (gnome_wp_xml_save_list): plug leaks.
	Fixes bug #396069.

2007-01-29  Kjartan Maraas  <kmaraas@gnome.org>

	* gnome-wp-capplet.c: (wallpaper_properties_init):
	ANSIfication of function declaration.

2007-01-08  David Sedeño <david@alderia.com>

	* gnome-wp-xml.c: Fix several compile warnings. Fixes #326022

2007-01-08  Ray Strode <rstrode@redhat.com>

	Fixes #351991

	* gnome-wp-info.c (gnome_wp_info_new): don't try to pull from
	~/.thumbnails directly without checking mtime.

	* gnome-wp-item.c (collect_save_options, gnome_wp_item_get_thumbnail):
	only 	generate thumbnails when a lookup shows there isn't already