@@ -1,3 +1,9 @@
+2007-04-28  Jens Granseuer  <jensgr@gmx.net>
+
+	* gnome-wp-capplet.c: (gnome_wp_remove_wallpaper): after removing a
+	wallpaper select the next one in the list instead of always going
+	to "No Wallpaper" (closes bug #432514)
+
 2007-04-27  Rodrigo Moya <rodrigo@gnome-db.org>
 
 	* background.desktop.in.in: renamed Bugzilla product.
